# balatro

./: .gitignore  CLAUDE.md  README.md  liblovely.dylib  prompt.xml
game_mod/: README.md  install.md
game_mod/BalatroRLBridge/: main.lua  mod.json
game_mod/BalatroRLBridge/lovely/: fix_end_consumeable_crash.toml  fix_pack_interrupt_nil.toml  fix_select_blind_crash.toml  fix_toggle_shop_crash.toml  fix_update_shop_crash.toml  fix_use_card_crash.toml
python/: README.md  pyproject.toml
python/balatro_env/: __init__.py  action_space.py  client.py  env.py  obs_tokenizer.py  schemas.py  strategy.py  util.py
python/balatro_env/scripts/: __init__.py  autopilot.py  do_smoke_actions.py  dump_state.py  interactive_shell.py  list_legal_actions.py  play_agent.py  probe_health.py
python/tests/: __init__.py  test_health.py  test_legal_actions.py  test_state_schema.py
